# mediascraper

./: .gitignore  README.md  setup.cfg  test_parser.txt
dev/: post-commit  pre-commit
src/mediascraper/: __main__.py  const.py  file_extensions.json  filesaver.py  parser.py  scraper.py  session.py  util.py  version.py
tests/: conftest.py  decorators.py  test_api.py  test_entry.py  test_extensions.py  test_filesaver.py  test_main.py  test_media_download.py  test_parser.py  test_scraping.py  util.py
