[metadata]
name = mediascraper
description = Scrape images, videos and sound from webpages and HTML files
version = 0.20.0
author = FancySnacks
author_email = adrian.urbaniak1336@gmail.com
license = MIT
readme = README
license_files = LICENSE
platforms = unix, cygwin, win32, osx, linux
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
packages =
    mediascraper
python_requires = >=3.11
install_requires =
    beautifulsoup4>=4.12.2
    requests>=2.31.0
package_dir =
    = src
zip_safe = no

[options.entry_points]
console_scripts =
    mediascraper = mediascraper.__main__:main

[build-system]
requires = ["setuptools~=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.extras_require]
testing =
    pytest>=7.2.0

[coverage:run]
source = mediascraper
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=mediascraper
    --cov-report=term-missing